--- a/download.html
+++ b/download.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Download | MikuMikuInstall</title>
     <link
       rel="stylesheet"
@@ -35,8 +35,8 @@
               <div class="content">
                 <p>Your download should start automatically.</p>
                 <p>
-                  If it doesn't after a few seconds, please click here to start
-                  downloading.
+                  If it doesn't after a few seconds, please
+                  <a id="forcedownload">click here</a> to start downloading.
                 </p>
               </div>
             </div>
@@ -46,12 +46,15 @@
     </section>
     <footer class="footer">
       <div class="content has-text-centered">
-        <p><strong>MikuMikuInstall</strong> by <a href="https://davidcralph.co.uk">David Ralph</a></p>
+        <p>
+          <strong>MikuMikuInstall</strong> by
+          <a href="https://davidcralph.co.uk">David Ralph</a>
+        </p>
       </div>
     </footer>
     <script>
       function downloadURI(uri) {
-        var link = document.createElement("a");
+        const link = document.createElement("a");
         link.setAttribute("download", "");
         link.href = uri;
         document.body.appendChild(link);
@@ -66,7 +69,7 @@
         version = "v0.0.1";
       }
 
-      setTimeout(() => {
+      function download() {
         switch (device) {
           case "win64":
             downloadURI(
@@ -86,6 +89,14 @@
           default:
             break;
         }
+      }
+
+      document.getElementById("forcedownload").addEventListener("click", () => {
+        download();
+      });
+
+      setTimeout(() => {
+        download();
       }, 3000);
     </script>
   </body>
