dark theme, wip uninstall page

--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
     />
-    <style>
-      .hero {
-        background: #16bebd !important;
-      }
-    </style>
+    <link
+      rel="stylesheet"
+      href="assets/css/theme.css"
+    />
   </head>
   <body>
     <section class="hero is-primary">
