--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
     />
-    <link
-      rel="stylesheet"
-      href="assets/css/theme.css"
-    />
+    <link rel="stylesheet" href="assets/css/theme.css" />
   </head>
   <body>
     <section class="hero is-primary">
@@ -61,6 +58,7 @@
                 <p>
                   For more information, visit the
                   <a
+                    target="_blank"
                     href="https://mikumikudance.fandom.com/wiki/MikuMikuDance_Wiki"
                     >MikuMikuDance Wiki</a
                   >.
@@ -85,6 +83,7 @@
                 <p>
                   For more information, visit the
                   <a
+                    target="_blank"
                     href="https://mikumikudance.fandom.com/wiki/MMD:MikuMikuEffect"
                     >MikuMikuDance Wiki</a
                   >.
